force-app/main/default/objects/BrillioFC__User_PermissionSet_Assign__c/BrillioFC__User_PermissionSet_Assign__c.object-meta.xml
<CustomObject>
    <label>ForceClinic User PermissionSet Assign</label>
    <nameField>
        <label>ForceClinic User PermissionSet Assign Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic User PermissionSet Assigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>