force-app/main/default/objects/BrillioFC__User_PermissionSet_Assign__c/fields/BrillioFC__User_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__User_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ForceClinic User</label>
    <referenceTo>BrillioFC__User_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic User PermissionSet Assigns</relationshipLabel>
    <relationshipName>User_PermissionSet_Assigns</relationshipName>
    <type>Lookup</type>
</CustomField>