force-app/main/default/objects/BrillioFC__User_PermissionSet_Assign__c/fields/BrillioFC__User_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__User_Name__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>